# OpenGL

./: CMakeLists.txt
src/: main.cpp
src/lesson02/: main.cpp  shader_utils.cpp  shader_utils.h
src/lesson02/res/shaders/: triangle.vert
src/lesson04/: main.cpp
src/lesson04/res/shaders/: triangle.frag
src/lesson05/: main.cpp
src/lesson05/res/shaders/: triangle.frag
src/lesson06/: main.cpp
src/lesson06/res/shaders/: triangle.frag  triangle.vert
src/lesson07/: main.cpp
src/lesson07/res/shaders/: rect.frag
src/lesson08/: main.cpp
src/lesson08/res/shaders/: rect.frag
src/utils/: texture.cpp  texture.h
